fix(drive): replace turn ordinals with latest request and signal ids