@@ -1,30 +1,42 @@
 package com.shaterguy.chatgptselfrun;
 
 import android.content.Context;
-import android.content.SharedPreferences;
 
 import java.util.HashSet;
 import java.util.Set;
 
-/** Durable marker for runs whose turn document is an immutable requirement record, not a signal log. */
+/** Durable per-run marker that selects one-signal-per-Google-Doc transport. */
 final class SelfRunSignalTransport {
     private static final String PREFS = "selfrun_drive_signal_transport";
-    private static final String KEY_RUNS = "signalDocumentRuns";
+    private static final String KEY_RUNS = "runs";
 
     private SelfRunSignalTransport() {}
 
-    static boolean mark(Context context, String runId) {
-        if (context == null || !SelfRunProtocolRules.validRunId(runId)) return false;
-        SharedPreferences prefs = context.getApplicationContext().getSharedPreferences(PREFS, Context.MODE_PRIVATE);
-        HashSet<String> next = new HashSet<>(prefs.getStringSet(KEY_RUNS, java.util.Collections.emptySet()));
-        next.add(runId);
-        return prefs.edit().putStringSet(KEY_RUNS, next).commit();
+    static void mark(Context context, String runId) {
+        String value = runId == null ? "" : runId.trim();
+        if (context == null || !SelfRunProtocolRules.validRunId(value)) {
+            throw new IllegalArgumentException("valid SelfRun id required for signal transport marker");
+        }
+        synchronized (SelfRunSignalTransport.class) {
+            Set<String> current = new HashSet<>(context.getApplicationContext()
+                    .getSharedPreferences(PREFS, Context.MODE_PRIVATE)
+                    .getStringSet(KEY_RUNS, Set.of()));
+            if (current.add(value)) {
+                boolean committed = context.getApplicationContext()
+                        .getSharedPreferences(PREFS, Context.MODE_PRIVATE).edit()
+                        .putStringSet(KEY_RUNS, current).commit();
+                if (!committed) throw new IllegalStateException("signal transport marker persistence failed");
+            }
+        }
     }
 
     static boolean isSignalDocumentRun(Context context, String runId) {
-        if (context == null || runId == null || runId.isEmpty()) return false;
-        Set<String> runs = context.getApplicationContext().getSharedPreferences(PREFS, Context.MODE_PRIVATE)
-                .getStringSet(KEY_RUNS, java.util.Collections.emptySet());
-        return runs != null && runs.contains(runId);
+        String value = runId == null ? "" : runId.trim();
+        if (context == null || value.isEmpty()) return false;
+        boolean enabled = context.getApplicationContext()
+                .getSharedPreferences(PREFS, Context.MODE_PRIVATE)
+                .getStringSet(KEY_RUNS, Set.of()).contains(value);
+        if (enabled) DriveSignalDocumentIdentity.activate(context, value);
+        return enabled;
     }
 }
